Bug 494069 - Ledger shows incorrect value for credit card account when reconciled transactions are hidden
Summary: Ledger shows incorrect value for credit card account when reconciled transact...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: git (master)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-03 22:02 UTC by Alexandre
Modified: 2024-10-06 12:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Test kmy file (924 bytes, application/x-kmymoney)
2024-10-03 22:02 UTC, Alexandre
Details
test kmymoney file (1.44 KB, application/octet-stream)
2024-10-03 22:08 UTC, Alexandre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre 2024-10-03 22:02:12 UTC
Created attachment 174384 [details]
Test kmy file

SUMMARY
Ledger shows incorrect value for credit card account when reconciled transactions are hidden

STEPS TO REPRODUCE
1.  Load test.kmy file
2.  Show ledger 
3.  Hide reconciled transactions

OBSERVED RESULT
Ledge shows the correct reconciliation (100) but now the the balance is negative (after the entry) and Payments are negative and Charges are positive. If the option "Hide reconciled transactions" is removed. it works correctly


EXPECTED RESULT
Ledger results do not change with the option "Hide reconciled transactions" on or off


SOFTWARE/OS VERSIONS
Operating System: Gentoo Linux 2.15
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.3
Kernel Version: 6.10.12-gentoo-archlinux (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 5900X 12-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 4060 Ti/PCIe/SSE2

ADDITIONAL INFORMATION
Comment 1 Alexandre 2024-10-03 22:08:46 UTC
Created attachment 174385 [details]
test kmymoney file
Comment 2 Thomas Baumgart 2024-10-06 12:32:30 UTC
Git commit 27e8ac3e6850cd915e1346b9d89143dee54dc68d by Thomas Baumgart.
Committed on 06/10/2024 at 12:24.
Pushed by tbaumgart into branch 'master'.

Fix balance display when some transactions are not shown

For liability accounts the starting balance for the first visible
transaction was not inverted causing the balances to be incorrect.
This change fixes the problem.
FIXED-IN: 5.2

M  +3    -7    kmymoney/models/specialledgeritemfilter.cpp

https://invent.kde.org/office/kmymoney/-/commit/27e8ac3e6850cd915e1346b9d89143dee54dc68d