Fix balance display when some transactions are not shown

For liability accounts the starting balance for the first visible
transaction was not inverted causing the balances to be incorrect.
This change fixes the problem.

BUG: 494069
FIXED-IN: 5.2